# NimPlant

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NimPlant.py  README.md  config.toml.example  nimplant.py  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
client/: NimPlant.nim  NimPlant.nimble  config.nims
client-rs/: Cargo.toml  build.rs
client-rs/.cargo/: config.toml
client-rs/src/: app.rs  internal.rs  lib.rs  main.rs  runner.rs
client-rs/src/app/: client.rs  commands.rs  config.rs  crypto.rs  debug.rs  dinvoke.rs  http.rs  patches.rs  self_delete.rs
client-rs/src/app/coff_loader/: beacon_api.rs  mod.rs
client-rs/src/app/commands/: cat.rs  cd.rs  cp.rs  curl.rs  download.rs  env.rs  execute_assembly.rs  get_av.rs  get_domain.rs  get_local_admins.rs  inline_execute.rs  ls.rs  mv.rs  powershell.rs  ps.rs  pwd.rs  rm.rs  shell.rs  shinject.rs  sleep.rs  upload.rs  wget.rs  whoami.rs
client-rs/src/internal/: commands.rs  config.rs  crypto.rs  helpers.rs  http.rs  intel.rs  listener.rs  mod.rs  patches.rs  win_utils.rs
client-rs/src/internal/coff_loader/: beacon_api.rs  mod.rs
client-rs/src/internal/commands/: cp.rs  curl.rs  download.rs  execute_assembly.rs  inline_execute.rs  mkdir.rs  mv.rs  powershell.rs  ps.rs  reg.rs  run.rs  screenshot.rs  shinject.rs  sleep.rs  upload.rs  wget.rs
client-rs/src/internal/tasks/: cat.rs  cd.rs  cp.rs  curl.rs  env.rs  execute.rs  get_av_products.rs  get_domain.rs  get_local_admins.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  ps.rs  pwd.rs  reg.rs  rm.rs  run.rs  shell.rs  unsupported.rs  upload.rs  wget.rs  whoami.rs
client/commands/: cat.nim  cd.nim  cp.nim  curl.nim  download.nim  env.nim  getAv.nim  getDom.nim  getLocalAdm.nim  ls.nim  mkdir.nim  mv.nim  ps.nim  pwd.nim  reg.nim  rm.nim  run.nim  screenshot.nim  upload.nim  wget.nim  whoami.nim
client/commands/risky/: executeAssembly.nim  inlineExecute.nim  powershell.nim  shell.nim  shinject.nim
client/util/: cfg.nim  crypto.nim  ekko.nim  functions.nim  patches.nim  selfDelete.nim  strenc.nim  webClient.nim  winUtils.nim
client/util/risky/: beaconFunctions.nim  delegates.nim  dinvoke.nim  structs.nim
detection/: hktl_nimplant.yar  nimplant_detection.yar  strings_test.yar
docker-example/: docker-compose.yml  nginx.conf
docker-example/html/: index.html
server/: .gitattributes  requirements.txt  server.py
server/api/: formatting.py  helpers.py  server.py
server/util/: commands.py  commands.yaml  config.py  crypto.py  db.py  func.py  input.py  listener.py  nimplant.py  notify.py  strings.py
server/web/: downloads.html  index.html  manifest.json  nimplants.html  server.html
server/web/nimplants/: details.html
server/web/static/: 404.html  index.47e3b014.js  index.4b967c81.css  index.5328e9f7.js  vendor.1e9d69d6.js
server/web/static/_next/static/1HDpMKy_Z6k131KtodBGP/: _buildManifest.js
server/web/static/_next/static/3KSkmFUMVnbO-Wavni-H0/: _buildManifest.js
server/web/static/_next/static/Hq3Fv2Oj3W7Eod36thDCh/: _buildManifest.js
server/web/static/_next/static/ZU1jtfNjRiwsjRJNnvQnF/: _buildManifest.js
server/web/static/_next/static/cB6yCqXAK-DnsAHmHMmss/: _buildManifest.js
server/web/static/_next/static/chunks/: 166-d09452c6a046eb75.js  188-56618d58e84d6677.js  188-6b6ae4d8616a6862.js  188-765e62a3f93ddf94.js  200-eb0f3103c52e99a0.js  256-3d5963955bc5cf98.js  256-be8324c95422e802.js  287-24092e9216401754.js  307-a1df24a31ecfbe56.js  359-49ea206086dfd878.js  379-9f93134d18572ef1.js  462-d762a03b0e14e59f.js  483-605e7627c4f028dc.js  501-1eeab0a73de0fc3c.js  501-5298cffa8a52dd81.js  511-99b699838343524d.js  516-61e482657f926faa.js  5c0b189e-8529559d513024f7.js  646-82c36f533201c720.js  673-f991f050544d182e.js  7-a90dc58109139329.js  770-a416ab98cf37ddad.js  824-bac75cb64c553388.js  845-276650f7544aff01.js  845-4fb261feecd435be.js  968-10dac91721e96090.js  968-1e6664348e778eea.js  main-010ff0b6bbe5ac8f.js  main-2d94ec6e4d65c635.js  main-a25bb6cd49197ab7.js  main-ac52e5f1ea1d2a16.js  webpack-0b5d8249fb15f5f3.js  webpack-3617322d1c7e7eea.js
server/web/static/_next/static/chunks/pages/: _app-00196d5652ddafee.js  _app-1b0a9c012a06025c.js  _app-241afdf5085905ae.js  _app-4747df47b93eaf6f.js  _app-73ad1c69ebde1cc0.js  _app-a4208aee2c10f942.js  _app-ebe4c37a3db57057.js  _app-ff1eaf5a1fa69292.js  downloads-074d376946895f05.js  downloads-2f0191d3d8f39adb.js  downloads-552bcb2718dc0301.js  downloads-a98c770860b40d3a.js  index-17cad7bd412a583c.js  (+16 more)
server/web/static/_next/static/css/: 1bfdeded59ccc0ae.css  6e40e35677374681.css  a741aa5e293e3dbc.css  c0d97c81cae9a0d1.css  d0edddf8544dff03.css  fde1b109f9704ff7.css
server/web/static/_next/static/jH3kFNuBLW0GCjwP6LjEW/: _buildManifest.js
server/web/static/_next/static/kpDVvjw_BQrKd4mGQMyfq/: _buildManifest.js
ui/: .env.development  .env.production  build-ui.py  index.html  next.config.js  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  vite.config.js
ui/components/: Console.tsx  Dots.tsx  DownloadList.tsx  InfoCard.tsx  InfoCardListNimplant.tsx  InfoCardListServer.tsx  MainLayout.tsx  NavbarContents.tsx  NimplantOverviewCard.tsx  NimplantOverviewCardList.tsx  TitleBar.tsx
ui/components/modals/: Cmd-Execute-Assembly.tsx  Cmd-Inline-Execute.tsx  Cmd-Shinject.tsx  Cmd-Upload.tsx  ExitServer.tsx
ui/modules/: nimplant.d.ts  nimplant.ts
ui/pages/: _app.tsx  _document.tsx  downloads.tsx  index.tsx  server.tsx
ui/pages/nimplants/: details.tsx  index.tsx
ui/src/: App.vue  main.js
ui/src/api/: nimplant.js
ui/src/assets/: index.css
ui/src/components/: AppHeader.vue  AppMenu.vue  ConsoleInput.vue  Logo.vue  Logomark.vue  MobileMenu.vue
ui/src/components/layouts/: MainLayout.vue  NimplantLayout.vue
ui/src/router/: index.js
ui/src/store/: index.js
ui/src/views/: Nimplants.vue  Server.vue
ui/src/views/Nimplant/: Console.vue  Details.vue
ui/src/views/Server/: Console.vue  Exit.vue
ui/styles/: buttonstyles.module.css  global.css  liststyles.module.css  styles.module.css
(+7 files in other folders)
